<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/message_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message_input"
        tools:listitem="@layout/message_item"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_above="@+id/discovery"
        android:hint="@string/write_message">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/message_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/publish_message"
        android:onClick="publish"/>

    <Button
        android:id="@+id/discovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_discovery"
        android:layout_alignParentBottom="true"
        android:onClick="startDiscovery"/>

    <Button
        android:id="@+id/advertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_advertising"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="startAdvertising"/>

</RelativeLayout>